new file:   Base/BaseDialog.ps1 	new file:   Base/BaseModel.ps1 	modified:   Base/Screen.ps1 	modified:   Base/UIElement.ps1 	modified:   Components/Button.ps1 	modified:   Components/CommandPalette.ps1 	modified:   Components/DataGrid.ps1 	new file:   Components/DockPanel.ps1 	new file:   Components/FastFileTree.ps1 	new file:   Components/GridPanel.ps1 	new file:   Components/HorizontalSplit.ps1 	modified:   Components/ListBox.ps1 	new file:   Components/MultiSelectListBox.ps1 	new file:   Components/ProgressBar.ps1 	new file:   Components/SearchableListBox.ps1 	deleted:    Components/SimpleButton.ps1 	modified:   Components/TabContainer.ps1 	modified:   Components/TextBox.ps1 	new file:   Components/TreeView.ps1 	new file:   Components/VerticalSplit.ps1 	modified:   Core/ScreenManager.ps1 	new file:   Core/StringBuilderPool.ps1 	modified:   Models/Project.ps1 	new file:   Models/Subtask.ps1 	modified:   Models/Task.ps1 	modified:   ROADMAP.md 	modified:   Screens/ConfirmationDialog.ps1 	new file:   Screens/DashboardScreen.ps1 	modified:   Screens/EditProjectDialog.ps1 	modified:   Screens/EditTaskDialog.ps1 	new file:   Screens/FileBrowserScreen.ps1 	new file:   Screens/FilePickerDialog.ps1 	modified:   Screens/MainScreen.ps1 	modified:   Screens/NewProjectDialog.ps1 	modified:   Screens/NewTaskDialog.ps1 	new file:   Screens/ProjectDetailScreen.ps1 	modified:   Screens/ProjectsScreen.ps1 	modified:   Screens/SettingsScreen.ps1 	new file:   Screens/SubtaskDialog.ps1 	modified:   Screens/TaskScreen.ps1 	modified:   Screens/TestScreen.ps1 	new file:   Screens/TextEditorScreen.ps1 	new file:   Screens/TimeEntryDialog.ps1 	new file:   Services/FocusManager.ps1 	new file:   Services/ShortcutManager.ps1 	new file:   Services/StateManager.ps1 	new file:   Services/SubtaskService.ps1 	modified:   Services/TaskService.ps1 	modified:   Start.ps1 	modified:   _Logs/praxis.log 	new file:   _Logs/praxis.log.old 	modified:   _ProjectData/projects.json 	new file:   _ProjectData

--- a/_ProjectData/tasks.json
+++ b/_ProjectData/tasks.json
@@ -31,14 +31,126 @@
     "Id": "d8402df2-eae9-4d2f-b11f-a1e12f59ee0a",
     "Title": "1",
     "Description": "2",
+    "Status": 3,
+    "Priority": 0,
+    "Progress": 100,
+    "ProjectId": "",
+    "Tags": [],
+    "DueDate": "0001-01-01T00:00:00",
+    "CreatedAt": "2025-07-22T07:22:08.7533461-06:00",
+    "UpdatedAt": "2025-07-22T14:43:26.6617552-06:00",
+    "Deleted": true
+  },
+  {
+    "Id": "82908b56-2c5e-4e12-a3f9-e951d799569c",
+    "Title": "11",
+    "Description": "22",
     "Status": 0,
     "Priority": 2,
     "Progress": 0,
     "ProjectId": "",
     "Tags": [],
     "DueDate": "0001-01-01T00:00:00",
-    "CreatedAt": "2025-07-22T07:22:08.7533461-06:00",
-    "UpdatedAt": "2025-07-22T07:22:08.7533461-06:00",
+    "CreatedAt": "2025-07-22T12:51:13.6946109-06:00",
+    "UpdatedAt": "2025-07-22T12:51:13.6946109-06:00",
+    "Deleted": false
+  },
+  {
+    "Id": "4e42dca6-6823-40bb-bc57-ccc61b81008e",
+    "Title": "Test Parent Task",
+    "Description": "A task to test subtask functionality",
+    "Status": 0,
+    "Priority": 2,
+    "Progress": 0,
+    "ProjectId": "",
+    "Tags": [],
+    "DueDate": "0001-01-01T00:00:00",
+    "CreatedAt": "2025-07-22T22:11:28.9335662-06:00",
+    "UpdatedAt": "2025-07-22T22:11:28.9335662-06:00",
+    "Deleted": false
+  },
+  {
+    "Id": "211cb37e-f96b-454b-9d52-5981cd8955f4",
+    "Title": "Frontend Development",
+    "Description": "Build the user interface",
+    "Status": 0,
+    "Priority": 2,
+    "Progress": 0,
+    "ProjectId": "",
+    "Tags": [],
+    "DueDate": "0001-01-01T00:00:00",
+    "CreatedAt": "2025-07-22T22:11:57.5215935-06:00",
+    "UpdatedAt": "2025-07-22T22:11:57.5215935-06:00",
+    "Deleted": false
+  },
+  {
+    "Id": "a0cc27c5-c5c7-432f-a1c1-6063478128b0",
+    "Title": "Backend API",
+    "Description": "Implement REST endpoints",
+    "Status": 0,
+    "Priority": 1,
+    "Progress": 0,
+    "ProjectId": "",
+    "Tags": [],
+    "DueDate": "0001-01-01T00:00:00",
+    "CreatedAt": "2025-07-22T22:11:57.6549719-06:00",
+    "UpdatedAt": "2025-07-22T22:11:57.6549719-06:00",
+    "Deleted": false
+  },
+  {
+    "Id": "c1f5df2b-797f-410b-9130-1c2dfda48698",
+    "Title": "Frontend Development",
+    "Description": "Build the user interface",
+    "Status": 0,
+    "Priority": 2,
+    "Progress": 0,
+    "ProjectId": "",
+    "Tags": [],
+    "DueDate": "0001-01-01T00:00:00",
+    "CreatedAt": "2025-07-22T22:12:26.9463342-06:00",
+    "UpdatedAt": "2025-07-22T22:12:26.9463342-06:00",
+    "Deleted": false
+  },
+  {
+    "Id": "67e1fa8c-1875-4374-b2b6-6750095c0e56",
+    "Title": "Backend API",
+    "Description": "Implement REST endpoints",
+    "Status": 0,
+    "Priority": 1,
+    "Progress": 0,
+    "ProjectId": "",
+    "Tags": [],
+    "DueDate": "0001-01-01T00:00:00",
+    "CreatedAt": "2025-07-22T22:12:27.0810913-06:00",
+    "UpdatedAt": "2025-07-22T22:12:27.0810913-06:00",
+    "Deleted": false
+  },
+  {
+    "Id": "8e7ee8fe-e197-417e-ba07-b37fc0774027",
+    "Title": "Test Parent Task",
+    "Description": "A task to test subtask functionality",
+    "Status": 0,
+    "Priority": 2,
+    "Progress": 0,
+    "ProjectId": "",
+    "Tags": [],
+    "DueDate": "0001-01-01T00:00:00",
+    "CreatedAt": "2025-07-22T22:12:42.8287207-06:00",
+    "UpdatedAt": "2025-07-22T22:12:42.8287207-06:00",
+    "Deleted": false
+  },
+  {
+    "Id": "29f22806-c40e-4f5a-b257-2906bc699e9c",
+    "Title": "Test Task",
+    "Description": "Testing null reference handling",
+    "Status": 0,
+    "Priority": 1,
+    "Progress": 0,
+    "ProjectId": "",
+    "Tags": [],
+    "DueDate": "0001-01-01T00:00:00",
+    "CreatedAt": "2025-07-22T22:53:32.1775757-06:00",
+    "UpdatedAt": "2025-07-22T22:53:32.1775757-06:00",
     "Deleted": false
   }
 ]
