modified:   Actions/AppendFieldAction.ps1 	modified:   Actions/CustomIdeaCommandAction.ps1 	modified:   Actions/ExportToExcelAction.ps1 	modified:   Actions/SummarizationAction.ps1 	modified:   Base/BaseDialog.ps1 	modified:   Base/Screen.ps1 	modified:   Components/MinimalButton.ps1 	modified:   Core/SpacingSystem.ps1 	modified:   Core/VT100.ps1 	modified:   Models/BaseAction.ps1 	new file:   Screens/ActionPropertiesDialog.ps1 	modified:   Screens/CommandEditDialog.ps1 	modified:   Screens/CommandLibraryScreen.ps1 	modified:   Screens/EventBusMonitor.ps1 	new file:   Screens/FieldPickerDialog.ps1 	modified:   Screens/FilePickerDialog.ps1 	new file:   Screens/HelpOverlay.ps1 	modified:   Screens/NumberInputDialog.ps1 	new file:   Screens/ScriptPreviewDialog.ps1 	new file:   Screens/SelectionDialog.ps1 	modified:   Screens/SettingsScreen.ps1 	modified:   Screens/SubtaskDialog.ps1 	modified:   Screens/TextEditorScreenNew.ps1 	modified:   Screens/TextInputDialog.ps1 	new file:   Screens/ThemeEditorDialog.ps1 	modified:   Screens/VisualMacroFactoryScreen.ps1 	new file:   Services/BackupService.ps1 	modified:   Services/ConfigurationService.ps1 	modified:   Services/MacroContextManager.ps1 	new file:   Services/MacroService.ps1 	modified:   Services/ThemeManager.ps1 	new file:   Services/ThemeSystem.ps1 	modified:   Start.ps1 	new file:   TEXT_EDITOR_FIXES.md 	new file:   Utils/ThemeBuilder.ps1 	modified:   _Config/settings.json 	modified:   _Logs/praxis.log 	modified:   _ProjectData/commands.json 	modified:   _ProjectData/projects.json 	new file:   test-text-editor.ps1 	new file:   test-theme-system.ps1

--- a/_Config/settings.json
+++ b/_Config/settings.json
@@ -1,35 +1,64 @@
 {
-  "Theme": "default",
-  "UI": {
-    "ShowScrollbars": true,
-    "CompactMode": false,
-    "AnimationsEnabled": true
-  },
-  "Performance": {
-    "EnableCaching": true,
-    "RenderOptimization": true,
-    "MaxCacheSize": 100
-  },
-  "Logging": {
-    "MaxFileSize": 10,
-    "MaxFiles": 5,
-    "Level": "Info"
-  },
-  "Projects": {
-    "AutoSave": true,
-    "BackupCount": 5,
-    "BackupEnabled": true,
-    "DefaultPath": "/home/teej/projects/github/praxis/_ProjectData"
+  "Tasks": {
+    "DefaultPriority": "Medium",
+    "ShowCompletedTasks": true,
+    "CompletedTaskRetention": 30
   },
   "Editor": {
     "ShowLineNumbers": true,
     "WordWrap": false,
+    "SyntaxHighlighting": true,
+    "HighlightCurrentLine": true,
     "TabSize": 4,
-    "HighlightCurrentLine": true
+    "AutoSaveInterval": 0
   },
-  "Tasks": {
-    "ShowCompletedTasks": true,
-    "DefaultPriority": "Medium",
-    "CompletedTaskRetention": 30
+  "Theme": {
+    "UserCustomizations": {},
+    "ShowThemePreview": true,
+    "AvailableThemes": [
+      "default",
+      "matrix",
+      "amber"
+    ],
+    "EditTheme": "[Click to open theme editor]",
+    "EnableLiveEdit": true,
+    "CurrentTheme": "default"
+  },
+  "UI": {
+    "ShowScrollbars": true,
+    "UseGradients": false,
+    "AnimationsEnabled": true,
+    "GradientType": "vertical",
+    "CompactMode": false,
+    "VerticalSpacing": 1
+  },
+  "Logging": {
+    "MaxFiles": 5,
+    "MaxFileSize": 10,
+    "Level": "Info"
+  },
+  "FileBrowser": {
+    "ShowHiddenFiles": false,
+    "ShowModifiedDate": false,
+    "ShowFileSize": true,
+    "DefaultPath": "/home/teej/projects/github/praxis",
+    "IgnoredExtensions": [
+      ".tmp",
+      ".cache",
+      ".log"
+    ],
+    "SortBy": "Name",
+    "SortDescending": false
+  },
+  "Performance": {
+    "RenderOptimization": true,
+    "EnableCaching": true,
+    "MaxCacheSize": 100
+  },
+  "Projects": {
+    "DefaultPath": "/home/teej/projects/github/praxis/_ProjectData",
+    "BackupCount": 5,
+    "BackupEnabled": true,
+    "AutoSave": true
   }
 }
