--- a/_ProjectData/projects.json
+++ b/_ProjectData/projects.json
@@ -1,87 +1,87 @@
 [
   {
-    "Deleted": false,
-    "ID1": "TX2024-001",
-    "Nickname": "SMITH2024",
-    "CumulativeHrs": 3.5,
-    "ID2": "CLIENT-SMITH",
+    "CAAPath": "",
     "Id": "d245f3ab-73bc-4ac6-8b66-044350bd171d",
-    "ClosedDate": "0001-01-01T00:00:00",
-    "DateAssigned": "2025-07-14T16:35:57",
-    "FullProjectName": "Smith Tax Return 2024",
-    "DateDue": "2025-08-04T16:35:57",
+    "ID1": "TX2024-001",
     "Note": "Standard 1040 with Schedule C",
+    "FullProjectName": "Smith Tax Return 2024",
+    "Deleted": false,
     "T2020Path": "",
+    "RequestPath": "",
+    "CumulativeHrs": 3.5,
+    "ClosedDate": "0001-01-01T00:00:00",
+    "Nickname": "SMITH2024",
+    "DateAssigned": "2025-07-14T16:35:57",
     "BFDate": "2025-07-14T16:35:57",
-    "CAAPath": "",
-    "RequestPath": ""
+    "ID2": "CLIENT-SMITH",
+    "DateDue": "2025-08-04T16:35:57"
   },
   {
-    "Deleted": false,
-    "ID1": "EP2024-002",
-    "Nickname": "JOHNSON-EP",
-    "CumulativeHrs": 12.0,
-    "ID2": "CLIENT-JOHNSON",
+    "CAAPath": "",
     "Id": "ae9e9205-df05-4d70-b149-06aa781f1bcc",
-    "ClosedDate": "0001-01-01T00:00:00",
-    "DateAssigned": "2025-07-07T16:35:57",
-    "FullProjectName": "Johnson Estate Planning",
-    "DateDue": "2025-07-28T16:35:57",
+    "ID1": "eEP2024-002",
     "Note": "Complex estate with multiple trusts",
+    "FullProjectName": "eeJohnson Estate Planning",
+    "Deleted": false,
     "T2020Path": "",
+    "RequestPath": "",
+    "CumulativeHrs": 12.0,
+    "ClosedDate": "0001-01-01T00:00:00",
+    "Nickname": "eJOHNSON-EP",
+    "DateAssigned": "2025-07-07T16:35:57",
     "BFDate": "2025-07-07T16:35:57",
-    "CAAPath": "",
-    "RequestPath": ""
+    "ID2": "CLIENT-JOHNSON",
+    "DateDue": "2025-07-28T00:00:00"
   },
   {
-    "Deleted": false,
-    "ID1": "",
-    "Nickname": "Default",
-    "CumulativeHrs": 0.0,
-    "ID2": "",
+    "CAAPath": "",
     "Id": "a5a6fa12-38f3-42f0-88ec-cbdf213da511",
-    "ClosedDate": "0001-01-01T00:00:00",
-    "DateAssigned": "2025-07-21T16:35:59",
-    "FullProjectName": "Default",
-    "DateDue": "2025-09-01T16:35:59",
+    "ID1": "",
     "Note": "Default project for uncategorized tasks",
+    "FullProjectName": "Default",
+    "Deleted": false,
     "T2020Path": "",
+    "RequestPath": "",
+    "CumulativeHrs": 0.0,
+    "ClosedDate": "0001-01-01T00:00:00",
+    "Nickname": "Default",
+    "DateAssigned": "2025-07-21T16:35:59",
     "BFDate": "2025-07-21T16:35:59",
-    "CAAPath": "",
-    "RequestPath": ""
+    "ID2": "",
+    "DateDue": "2025-09-01T16:35:59"
   },
   {
-    "Deleted": false,
-    "ID1": "",
-    "Nickname": "111",
-    "CumulativeHrs": 0.0,
-    "ID2": "",
+    "CAAPath": "",
     "Id": "90167dc5-baa7-4761-a817-82af27d8f206",
-    "ClosedDate": "0001-01-01T00:00:00",
-    "DateAssigned": "2025-07-22T13:12:02",
-    "FullProjectName": "111",
-    "DateDue": "2025-09-02T13:12:02",
+    "ID1": "",
     "Note": "",
+    "FullProjectName": "111",
+    "Deleted": false,
     "T2020Path": "",
+    "RequestPath": "",
+    "CumulativeHrs": 0.0,
+    "ClosedDate": "0001-01-01T00:00:00",
+    "Nickname": "111",
+    "DateAssigned": "2025-07-22T13:12:02",
     "BFDate": "2025-07-22T13:12:02",
-    "CAAPath": "",
-    "RequestPath": ""
+    "ID2": "",
+    "DateDue": "2025-09-02T13:12:02"
   },
   {
-    "Deleted": false,
-    "ID1": "",
-    "Nickname": "222",
-    "CumulativeHrs": 0.0,
-    "ID2": "",
-    "Id": "e11383e6-c059-4224-a03b-c4561537a818",
-    "ClosedDate": "0001-01-01T00:00:00",
-    "DateAssigned": "2025-07-22T13:49:20",
-    "FullProjectName": "222",
-    "DateDue": "2025-09-02T00:00:00",
-    "Note": "NOTES!!",
-    "T2020Path": "",
-    "BFDate": "2025-07-22T13:49:20",
     "CAAPath": "",
-    "RequestPath": ""
+    "Id": "e11383e6-c059-4224-a03b-c4561537a818",
+    "ID1": "",
+    "Note": "NOTES!!",
+    "FullProjectName": "222",
+    "Deleted": false,
+    "T2020Path": "",
+    "RequestPath": "",
+    "CumulativeHrs": 0.0,
+    "ClosedDate": "0001-01-01T00:00:00",
+    "Nickname": "222",
+    "DateAssigned": "2025-07-22T13:49:20",
+    "BFDate": "2025-07-22T13:49:20",
+    "ID2": "",
+    "DateDue": "2025-09-02T00:00:00"
   }
 ]
